--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,3 +8,103 @@ $link-color: purple;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+$body-typeface: "Gill Sans", "Gill Sans MT", "Gill Sans Nova", Lato, sans-serif;
+$text-width: 650px;
+
+html, html[data-theme="light"] {
+  --bold-color: rgb(0, 0, 0);
+  --box-background-color: rgb(249, 249, 250);//hsl(0, 0%, 90%);
+  --highlight-color: hsl(0, 0%, 80%);
+  --light-border-color: rgb(230, 230, 230);//hsl(0, 0%, 42%);//hsl(0, 0%, 80%);
+  --light-text-color: rgb(72, 72, 74);//hsl(0, 0%, 35%);
+  --link-color: rgb(0, 112, 201);//hsl(218, 85%, 43%);
+  --link-color-visited: hsl(250, 100%, 37%);
+  --main-background-color: rgb(255, 255, 255);//hsl(0, 0%, 99%);
+  --main-text-color: rgb(51, 51, 51);//rgb(28, 28, 30);//hsl(0, 0%, 11%);
+  --medium-text-color: hsl(0, 0%, 20%);
+  --sidebar-color: hsl(0, 0%, 90%);
+  --underline-color: hsl(0, 0%, 60%);
+}
+
+html[data-theme="dark"] {
+  --bold-color: rgb(240, 240, 240);
+  --box-background-color: hsl(0, 0%, 20%);
+  --highlight-color: hsl(0, 0%, 60%);
+  --light-border-color: hsl(0, 0%, 30%);
+  --light-text-color: rgb(199, 199, 204);
+  --link-color: rgb( 100, 210, 255);
+  --link-color-visited: hsl(250, 100%, 60%);
+  --main-background-color: rgb(28, 28, 30);
+  --main-text-color: rgb(229, 229, 234);
+  --medium-text-color: hsl(0, 0%, 70%);
+  --underline-color: hsl(0, 0%, 50%);
+}
+
+
+@media (prefers-color-scheme: dark) {
+    html, html[data-theme="dark"] {
+      --bold-color: rgb(255, 255, 255);
+      --box-background-color: hsl(0, 0%, 20%);
+      --highlight-color: hsl(0, 0%, 60%);
+      --light-border-color: hsl(0, 0%, 30%);
+      --light-text-color: rgb(199, 199, 204);
+      --link-color: rgb( 100, 210, 255);
+      --link-color-visited: hsl(250, 100%, 60%);
+      --main-background-color: rgb(28, 28, 30);
+      --main-text-color: rgb(229, 229, 234);
+      --medium-text-color: hsl(0, 0%, 70%);
+      --underline-color: hsl(0, 0%, 50%);
+    }
+
+    html[data-theme="light"] {
+  --bold-color: rgb(0, 0, 0);
+  --box-background-color: rgb(249, 249, 250);//hsl(0, 0%, 90%);
+  --highlight-color: hsl(0, 0%, 80%);
+  --light-border-color: rgb(230, 230, 230);//hsl(0, 0%, 42%);//hsl(0, 0%, 80%);
+  --light-text-color: rgb(72, 72, 74);//hsl(0, 0%, 35%);
+  --link-color: rgb(0, 112, 201);//hsl(218, 85%, 43%);
+  --link-color-visited: hsl(250, 100%, 37%);
+  --main-background-color: rgb(255, 255, 255);//hsl(0, 0%, 99%);
+  --main-text-color: rgb(51, 51, 51);//rgb(28, 28, 30);//hsl(0, 0%, 11%);
+  --medium-text-color: hsl(0, 0%, 20%);
+  --sidebar-color: hsl(0, 0%, 90%);
+  --underline-color: hsl(0, 0%, 60%);
+  }
+}
+
+html, html[data-theme="dark"], html[data-theme="light"] {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
+body {
+  background-color: var(--main-background-color);
+  color: var(--main-text-color);
+}
+
+.bottom-nav {
+  border-top: 1px solid var(--light-border-color);
+}
+
+.previous-link {
+  border-right: 1px solid var(--light-border-color);
+}
+
+.index-links {
+  border-top: 1px solid var(--light-border-color);
+}
+
+.contact-info {
+  border-top: 1px solid var(--light-border-color);
+}
+
+.theme-toggle-button {
+  background-color: var(--main-background-color);
+  border: none;
+  color: var(--light-text-color);
+  cursor: pointer;
+  float: right;
+  max-width: $text-width;
+  text-transform: uppercase;
+}
