--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
     {% include_cached browser-upgrade.html %}
     {% include_cached masthead.html %}
 
+    <div class="button-container">
+      	<a id="theme-toggle" onclick="modeSwitcher()" class="theme-toggle-button"></a>
+    </div>
+
     <div class="initial-content">
       {{ content }}
     </div>
@@ -38,6 +42,8 @@
     </div>
 
     {% include scripts.html %}
+
+    <script src="/assets/scripts/mode-switcher.js"></script>
 
   </body>
 </html>
