--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,11 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
+<!-- Favicon -->
 <link rel="shortcut icon" type="image/png" href="favicon.png">
+
+<!-- iOS icons -->
+<link rel="apple-touch-icon" href="/assets/images/pa1-custom/apple-touch-icon.png">
 
 
 <!--[if IE ]>
