--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,10 +15,10 @@
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
 <!-- Favicon -->
-<link rel="shortcut icon" type="image/png" href="favicon.png">
+<link rel="shortcut icon" type="image/png" href="/assets/images/pa1-custom/favicon.png">
 
 <!-- iOS icons -->
-<link rel="apple-touch-icon" href="/assets/images/pa1-custom/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/pa1-custom/apple-touch-icon-iphone-retina-180x180.png">
 
 
 <!--[if IE ]>
